--- a/angular/angular-app/package.json
+++ b/angular/angular-app/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@angular/upgrade": "^4.0.1",
     "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.10",
     "rxjs": "^5.1.0",
+    "systemjs": "^0.20.12",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
