--- a/jobeet/app/config/config.yml
+++ b/jobeet/app/config/config.yml
@@ -1,8 +1,8 @@
 imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
-    - { resource: services.yml }
-    - { resource: "@IbwJobeetBundle/Resources/config/services.yml" }
+    - { resource: _services.yml }
+    - { resource: "@IbwJobeetBundle/Resources/config/_services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
