--- a/symfony-angular/app/config/parameters.yml.dist
+++ b/symfony-angular/app/config/parameters.yml.dist
@@ -17,3 +17,10 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
+
+    # nelmio cors
+    cors_allow_origin: "http://localhost"
+
+    # nelmio api docs
+    api_name: 'Calendar API'
+    api_description: 'API to deal with notes in calendar'
