--- a/symfony-angular/app/config/routing.yml
+++ b/symfony-angular/app/config/routing.yml
@@ -1,3 +1,11 @@
+NelmioApiDocBundle:
+    resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
+    prefix: "/doc"
+
+api:
+    type: rest
+    resource: "routing_api.yml"
+
 app:
-    resource: '@AppBundle/Controller/'
+    resource: '@AppBundle/Controller/DefaultController.php'
     type: annotation
