--- a/symfony-angular/app/config/security.yml
+++ b/symfony-angular/app/config/security.yml
@@ -13,6 +13,10 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
+        api_docs:
+                    pattern: ^/doc
+                    anonymous: true
+
         main:
             anonymous: ~
             # activate different ways to authenticate
@@ -22,3 +26,8 @@ security:
 
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
             #form_login: ~
+
+    access_control:
+            - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/doc,   roles: IS_AUTHENTICATED_ANONYMOUSLY }
+            - { path: ^/,      roles: IS_AUTHENTICATED_ANONYMOUSLY }
