--- a/symfony-angular/composer.json
+++ b/symfony-angular/composer.json
@@ -24,14 +24,19 @@
     "doctrine/doctrine-bundle": "^1.6",
     "doctrine/doctrine-cache-bundle": "^1.2",
     "doctrine/orm": "^2.5",
+    "friendsofsymfony/rest-bundle": "^1.7",
     "incenteev/composer-parameter-handler": "^2.0",
+    "jms/serializer-bundle": "^1.1",
+    "nelmio/api-doc-bundle": "^2.11",
+    "nelmio/cors-bundle": "^1.4",
     "sensio/distribution-bundle": "^5.0",
     "sensio/framework-extra-bundle": "^3.0.2",
     "symfony/monolog-bundle": "^3.0.2",
     "symfony/polyfill-apcu": "^1.0",
     "symfony/swiftmailer-bundle": "^2.3.10",
     "symfony/symfony": "3.2.*",
-    "twig/twig": "^1.0||^2.0"
+    "twig/twig": "^1.0||^2.0",
+    "willdurand/faker-bundle": "^1.3"
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
