--- a/symfony-angular/package.json
+++ b/symfony-angular/package.json
@@ -25,9 +25,9 @@
     "angular2-color-picker": "^1.3.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ng-pick-datetime": "^4.1.2",
     "ng2-bootstrap": "^1.6.3",
     "ng2-bootstrap-modal": "^1.0.1",
-    "ng2-date-time-picker": "^4.0.0",
     "ngx-color-picker": "^4.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
