--- a/symfony-angular/package.json
+++ b/symfony-angular/package.json
@@ -14,20 +14,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/forms": "^4.0.1",
+    "@angular/http": "^4.0.1",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/router": "^4.0.1",
     "angular2-color-picker": "^1.3.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "ng-pick-datetime": "^4.1.2",
-    "ng2-bootstrap": "^1.6.3",
-    "ng2-bootstrap-modal": "^1.0.1",
+    "ngx-bootstrap": "^1.6.3",
+    "ngx-bootstrap-modal": "^1.0.1",
     "ngx-color-picker": "^4.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
@@ -35,14 +35,18 @@
   "devDependencies": {
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.0",
+    "@ngtools/webpack": "^1.5.5",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
+    "ajv": "^5.2.2",
     "autoprefixer": "^6.5.3",
     "codelyzer": "~2.0.0",
     "css-loader": "^0.26.1",
     "cssnano": "^3.10.0",
     "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.10.0",
+    "html-webpack-plugin": "^2.30.1",
     "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
@@ -54,21 +58,24 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-sourcemap-loader": "^0.3.7",
+    "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "node-sass": "^4.5.3",
     "postcss-loader": "^0.13.0",
     "postcss-url": "^5.1.2",
     "protractor": "~5.1.0",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^4.1.1",
+    "sass-loader": "^6.0.6",
     "script-loader": "^0.7.0",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
+    "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
     "typescript": "~2.2.0",
     "url-loader": "^0.5.7",
-    "webpack-dev-server": "~2.3.0"
+    "webpack": "^3.5.2",
+    "webpack-dev-server": "^2.7.1"
   }
 }
